Update US STARTUPS - Data cleaning and EDA.ipynb

--- a/US STARTUPS - Data cleaning and EDA.ipynb
+++ b/US STARTUPS - Data cleaning and EDA.ipynb
@@ -4427,7 +4427,7 @@
    "source": [
     "plt.figure(figsize=(8,6))\n",
     "sns.barplot(y=top_company_tagged.index,x=top_company_tagged,saturation=1)\n",
-    "plt.title(\"MOST TAGGED SOCIAL MEDIA\");"
+    "plt.title(\"MOST TAGGED INDUSTRIES\");"
    ]
   },
   {
